fix detail view error when no user logged in and make text overflow into ellipsis

--- a/views/css/sass/components/_resource-template.scss
+++ b/views/css/sass/components/_resource-template.scss
@@ -40,6 +40,12 @@
     font-weight: bold;
     box-sizing: content-box;
     background-color: white;
+    
+    &-text {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
   
   &__description {
